# apertium-en-fr

./: .gitignore  GRAFT  Makefile.am  README  ant-to-be-checked  apertium-en-fr.en-fr.dix  apertium-en-fr.en-fr.dix.orig  apertium-en-fr.en-fr.lrx  apertium-en-fr.en-fr.t1x  apertium-en-fr.en-fr.t2x  apertium-en-fr.en-fr.t3x  apertium-en-fr.en.metadix  apertium-en-fr.fr-en.lrx  apertium-en-fr.fr-en.t1x  apertium-en-fr.fr-en.t2x  apertium-en-fr.fr-en.t3x  apertium-en-fr.fr.metadix  configure.ac  modes.xml  regression-tests.sh  wiki-tests.sh
misc/: ling-resources.xml  noun-adder.pl  verbs
